lds and create update delete wire adapters

--- a/force-app/main/default/lwc/movieSearch/movieSearch.css
+++ b/force-app/main/default/lwc/movieSearch/movieSearch.css
@@ -5,3 +5,7 @@
     border-radius: 5px;
     background-color:whitesmoke;
 }
+.displaystyle{
+    height: 600px;
+    background-color: rgb(63, 58, 58);
+}
